[package]
name = "string_format"
version = "0.1.0"
authors = ["Clément Guiton <clement.guiton.dev@gmail.com>"]
edition = "2018"
description =  "the std::format! with Strings"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
